--- a/Final Project/Final Project/socialstory.html
+++ b/Final Project/Final Project/socialstory.html
@@ -25,14 +25,23 @@
 
 
       <div class="storyflex">
-        <div id="storyboxes">
-          <p>Story</p>
+        <div id="StoryHeader">
+          <h1>Playing</h1>
         </div>
         <div id="storyboxes">
-          <p>Story</p>
+          <p>Sometimes i like to play with other kids</p>
         </div>
         <div id="storyboxes">
-          <p>Story</p>
+          <p>I can ask them, "Do you want to play with me?"</p>
+        </div>
+        <div id="storyboxes">
+          <p>If they say "yes", I can play with them. I will have fun.</p>
+        </div>
+        <div id="storyboxes">
+          <p>If they say "no", it's ok.</p>
+        </div>
+        <div id="storyboxes">
+          <p>I can ask someone else or play by myself</p>
         </div>
       </div>
 
