html and css with social story is done

--- a/Final Project/Final Project/socialstory2.html
+++ b/Final Project/Final Project/socialstory2.html
@@ -26,31 +26,34 @@
 
       <div class="storyflex">
         <div id="StoryHeader">
-          <h1>Playing</h1>
+          <h1>Rules for school</h1>
         </div>
         <div id="storyboxes">
-          <p>Sometimes i like to play with other kids</p>
+          <p>I listen to my teacher.</p>
         </div>
         <div id="storyboxes">
-          <p>I can ask them, "Do you want to play with me?"</p>
+          <p>I put my hand up and wait when I want to talk.</p>
         </div>
         <div id="storyboxes">
-          <p>If they say "yes", I can play with them. I will have fun.</p>
+          <p>I use a quiet voice inside the school.</p>
         </div>
         <div id="storyboxes">
-          <p>If they say "no", it's ok.</p>
+          <p>I keep my hands and feet to myself.</p>
         </div>
         <div id="storyboxes">
-          <p>I can ask someone else or play by myself</p>
+          <p>I do my work.</p>
+        </div>
+        <div id="storyboxes">
+          <p>I put my things away when it's time to clean up.</p>
         </div>
       </div>
 
       <<div class="footer">
         <div class="arrow1">
-          <a href="./back">&#8592; BACK</a>
+          <a href="socialstory.html">&#8592; BACK</a>
         </div>
         <div id="arrow2">
-          <a href="socialstory2.html">NEXT &#8594;</a>
+          <a href="bravo.gif" target="blank">NEXT &#8594;</a>
         </div>
 
       </div>
