--- a/Final Project/Final Project/timetable.html
+++ b/Final Project/Final Project/timetable.html
@@ -83,7 +83,7 @@
               <a  href="./Week Plan"><img src="Timetable.png" alt="Week Plan" width="50" height="50"><br>WEEK PLAN</a>
               <a  href="./Safe Space"><img src="safe place.png" alt="Safe Space" width="50" height="50"><br> SAFE SPACE</a>
               <a  href="./Mood"><img src="Mood.png" alt="Mood" width="50" height="50"><br> MOOD</a>
-              <a href="./Social Story"><img src="socialstory.png" alt="Social Story" width="50" height="50"><br>Social Story</a>
+              <a href="socialstory.html"><img src="SocialStory.png" alt="Social Story" width="50" height="50"><br>Social Story</a>
           </div>
       </div>
 
