Har inkorporert Moods i main, har laga Week Plan

--- a/Final Project/Final Project/Sign in.html
+++ b/Final Project/Final Project/Sign in.html
@@ -10,7 +10,7 @@
      <div class="signin-box">
         <img src="avatar.png" class="avatar">
         <h1>Sign In Here</h1>
-        <form action="./timetable.html">
+        <form action="./main.html">
         <p>Username</p>
         <input type="text" name="Username" placeholder="Enter Username">
         <p>Password</p>
