--- a/Final Project/Final Project/main.html
+++ b/Final Project/Final Project/main.html
@@ -22,7 +22,6 @@
         <h4>To-do</h4>
       </div>
 
-
       <div id="åtte" class="timetablebody">
         <h5>08.15-10.00</h5>
       </div>
@@ -82,7 +81,8 @@
               <a  href="./Homework"><img src="Assignments.png" alt="Homework" width="50" height="50"><br>LANGUAGE<br></br> COMPREHENSION</a>
               <a  href="timetable.html"><img src="Timetable.png" alt="Week Plan" width="50" height="50"><br>WEEK PLAN</a>
               <a  href="./Safe Space"><img src="safe place.png" alt="Safe Space" width="50" height="50"><br> SAFE SPACE</a>
-              <a  href="./Mood.html"><img src="Mood.png" alt="Mood" width="50" height="50"><br>MOOD</a>
+              <a  href="mood.html"><img src="Mood.png" alt="Mood" width="50" height="50"><br>MOOD</a>
+              <a  href=".socialstory.html"><img src="SocialStory.png" alt="Mood" width="50" height="50"><br>MOOD</a>
           </div>
     </div>
 
