--- a/Final Project/Final Project/socialstory2.html
+++ b/Final Project/Final Project/socialstory2.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
   <head>
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <title>Timetable</title>
+  <link rel="stylesheet" type="text/css" href="css.css">
+  <title>Social Story2</title>
   </head>
 
   <body>
@@ -14,14 +14,14 @@
 
     <div class="secondboxes">
           <div id="navigationbar">
-              <a  href="#"> Hi Henriette! <br> <img src="train.jpg" alt="train" width="50" height="50"><br>Sign out</a>
-              <a  href="./Homework"><img src="Assignments.png" alt="Homework" width="50" height="50"><br>HOMEWORK</a>
-              <a  href="./Week Plan"><img src="Timetable.png" alt="Week Plan" width="50" height="50"><br>WEEK PLAN</a>
-              <a  href="./Safe Space"><img src="safe place.png" alt="Safe Space" width="50" height="50"><br> SAFE SPACE</a>
-              <a  href="./Mood"><img src="Mood.png" alt="Mood" width="50" height="50"><br> MOOD</a>
-              <a href="socialstory.html"><img src="SocialStory.png" alt="Social Story" width="50" height="50"><br>Social Story</a>
+              <a  href="./Sign in.html"> Hi Henriette! <br> <img src="train.jpg" alt="train" width="50" height="50"><br>Sign out</a>
+              <a  href="./Homework"><img src="Assignments.png" alt="Homework" width="50" height="50"><br>LANGUAGE<br></br> COMPREHENSION</a>
+              <a  href="timetable.html"><img src="Timetable.png" alt="Week Plan" width="50" height="50"><br>WEEK PLAN</a>
+              <a  href="SafeSpace.html"><img src="safe place.png" alt="Safe Space" width="50" height="50"><br> SAFE SPACE</a>
+              <a  href="mood.html"><img src="Mood.png" alt="Mood" width="50" height="50"><br>MOOD</a>
+              <a  href="socialstory.html"><img src="SocialStory.png" alt="Mood" width="50" height="50"><br>Social Story</a>
           </div>
-      </div>
+    </div>
 
 
       <div class="storyflex">
