--- a/Final Project/Final Project/main.html
+++ b/Final Project/Final Project/main.html
@@ -86,6 +86,11 @@
           </div>
     </div>
 
+    <div class="midcontent">
+      <h2>Hope your day is going awesomely, Henriette!</h2>
+      <img src="TogX.png" alt="Picture of a cartoon train">
+    </div>
+
     <div class="chat">
       <div class="chat-header">
         <h3>Teacher Chat</h3>
