--- a/Final Project/Final Project/SafeSpace.html
+++ b/Final Project/Final Project/SafeSpace.html
@@ -16,7 +16,7 @@
               <div>
                   <h1>Take a deep breath and let it go</h1>
                   <p>Feel better?</p>
-                  <a href="./main.html"><button class="button" onclick="alert('Good Job, Bye')">click here! </button></a>
+                  <a href="./main.html"><button class="button" onclick="alert('Are you ready?')">click here! </button></a>
             </div>
       </div>
   </body>
