--- a/Final Project/Final Project/socialstory.html
+++ b/Final Project/Final Project/socialstory.html
@@ -14,7 +14,7 @@
 
     <div class="secondboxes">
           <div id="navigationbar">
-              <a  href="./Sign in.html"> Hi Henriette! <br> <img src="train.jpg" alt="train" width="50" height="50"><br>Sign out</a>
+              <a  href="./Sign in.html" onclick="alert('Good Job! Bye')"> Hi Henriette! <br> <img src="train.jpg" alt="train" width="50" height="50"><br>Sign out</a>
               <a  href="./Homework"><img src="Assignments.png" alt="Homework" width="50" height="50"><br>LANGUAGE<br></br> COMPREHENSION</a>
               <a  href="timetable.html"><img src="Timetable.png" alt="Week Plan" width="50" height="50"><br>WEEK PLAN</a>
               <a  href="SafeSpace.html"><img src="safe place.png" alt="Safe Space" width="50" height="50"><br> SAFE SPACE</a>
