--- a/Final Project/Final Project/SafeSpace.html
+++ b/Final Project/Final Project/SafeSpace.html
@@ -2,22 +2,24 @@
 
 <html>
   <head>
-   <link rel="stylesheet" type="text/css" href="Safe Space.css">
-   <title>Safe Space</title>
+    <link rel="stylesheet" type="text/css" href="Safe Space.css">
+    <title>Safe Space</title>
   </head>
   <body>
-        <iframe src="TrainSoundPass.mp3" allow="autoplay" style="display:none" id="iframeAudio">
-        </iframe> <!--outoplay for chrome browser-->
-        <audio autoplay loop><!--outoplay for other browser-->
-              <source src="TrainSoundPass.mp3" type="audio/mp3">
-        </audio>
-        <div class="background">
-                  <MARQUEE direction="right"><img class="train" src="oct69.gif" alt="train" ></MARQUEE><!--make the picture scroll-->
-              <div>
-                  <h1>Take a deep breath and let it go</h1>
-                  <p>Feel better?</p>
-                  <a href="./main.html"><button class="button" onclick="alert('Are you ready?')">click here! </button></a>
-            </div>
-      </div>
+        <div>
+            <iframe src="TrainSoundPass.mp3" allow="autoplay" id="Audio">
+            </iframe> <!--outoplay for chrome browser-->
+            <audio autoplay loop><!--outoplay for other browser-->
+                    <source src="TrainSoundPass.mp3" type="audio/mp3">
+            </audio>
+        </div>
+        <div class="train">
+            <img src="oct69.gif" >
+        </div>
+        <div class="feelbutton">
+            <h1>Take a deep breath and let it go</h1>
+            <p>Feel better?</p>
+            <a href="./main.html"><button class="button" onclick="alert('Are you ready?')">click here! </button></a>
+        </div>
   </body>
 </html>
