Fixed some margins

--- a/Final Project/Final Project/mood.html
+++ b/Final Project/Final Project/mood.html
@@ -83,7 +83,7 @@
             <a  href="./Homework"><img src="Assignments.png" alt="Homework" width="50" height="50"><br>LANGUAGE<br></br> COMPREHENSION</a>
             <a  href="timetable.html"><img src="Timetable.png" alt="Week Plan" width="50" height="50"><br>WEEK PLAN</a>
             <a  href="SafeSpace.html"><img src="safe place.png" alt="Safe Space" width="50" height="50"><br> SAFE SPACE</a>
-            <a  href="mood.html"><img src="Mood.png" alt="Mood" width="50" height="50"><br>MOOD</a>
+            <a  href="main.html"><img src="Mood.png" alt="Mood" width="50" height="50"><br>MOOD</a>
             <a  href="socialstory.html"><img src="SocialStory.png" alt="Mood" width="50" height="50"><br>Social Story</a>
         </div>
   </div>
@@ -173,6 +173,5 @@
       <span id="right" class="time">13.24</span>
     </div>
   </div>
-
 </body>
 </html>
