--- a/Final Project/Final Project/socialstory.html
+++ b/Final Project/Final Project/socialstory.html
@@ -108,7 +108,7 @@
         </div>
       </div>
 
-      <div class="chat">
+      <div class="chat" id="chat">
         <div class="chat-header">
           <h3>Teacher Chat</h3>
           <h4>Feelings</h4>
@@ -158,6 +158,23 @@
         </div>
 
       </div>
+
+      <script>
+        window.onscroll = function() {move()};
+
+        var ch = document.getElementById("chat");
+        var sticky = ch.offsetTop;
+
+        function move() {
+          if (window.pageYOffset > sticky) {
+              ch.classList.add("sticky");
+          } else {
+              ch.classList.remove("sticky");
+          }
+        }
+
+      </script>
+
     </body>
 
   </html>
