Skifta Gif'en din, Andrea! :P

--- a/Final Project/Final Project/socialstory2.html
+++ b/Final Project/Final Project/socialstory2.html
@@ -157,7 +157,7 @@
           <a href="socialstory.html">&#8592; BACK</a>
         </div>
         <div id="arrow2">
-          <a href="bravo.gif" target="blank">NEXT &#8594;</a>
+          <a href="brilliant.gif" target="blank">NEXT &#8594;</a>
         </div>
 
       </div>
