Fiksa title i mainen

--- a/Final Project/Final Project/main.html
+++ b/Final Project/Final Project/main.html
@@ -3,7 +3,7 @@
 
   <head>
   <link rel="stylesheet" type="text/css" href="css.css">
-  <title>Timetable</title>
+  <title>Web resource for children diagnosed with ASD in schools</title>
   </head>
 
   <body>
