--- a/Final Project/Final Project/mood.html
+++ b/Final Project/Final Project/mood.html
@@ -84,7 +84,7 @@
             <a  href="timetable.html"><img src="Timetable.png" alt="Week Plan" width="50" height="50"><br>WEEK PLAN</a>
             <a  href="SafeSpace.html"><img src="safe place.png" alt="Safe Space" width="50" height="50"><br> SAFE SPACE</a>
             <a  href="main.html"><img id="home" src="house.png" alt="Home" width="50" height="50"><br>HOME</a>
-            <a  href="socialstory.html"><img src="SocialStory.png" alt="Mood" width="50" height="50"><br>Social Story</a>
+            <a  href="socialstory.html"><img src="SocialStory.png" alt="Mood" width="50" height="50"><br>SOCIAL STORY</a>
         </div>
   </div>
 
