Masse pene forandringer

--- a/Final Project/Final Project/homework.html
+++ b/Final Project/Final Project/homework.html
@@ -1,78 +1,202 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="lang.css">
+    <link rel="stylesheet" href="css.css">
     <title> Language comprehension exercise example </title>
 
 </head>
 
 <body>
-    <h1>Language comprehension</h1><h2>Exercises <br> Week 47</h2>
+  <div class="header">
+    <h2>Monday 17. January</h2>
+    <h3>2020</h3>
+  </div>
+  <div class="timetable">
+    <div id="time" class="columntitle">
+      <h4>Time</h4>
+    </div>
+    <div id="subject" class="columntitle">
+      <h4>Subject</h4>
+    </div>
+    <div id="to-do" class="columntitle">
+      <h4>To-do</h4>
+    </div>
 
-    <!-- Slideshow container -->
-<div class="slideshow-container">
-
-  <!-- Full-width images with number and caption text -->
-  <div class="mySlides fade">
-    <div class="numbertext">1 / 8</div>
-    <img src="homework.jpg" style="width:100%">
-    <div class="text">Caption Text</div>
+    <div id="åtte" class="timetablebody">
+      <h5>08.15-10.00</h5>
+    </div>
+    <div id="åtte" class="timetablebody">
+      <h5>Norwegian (Social Story)</h5>
+    </div>
+    <div id="åtte" class="timetablebody">
+      <h5>Write a social story about feeling mad</h5>
+      <a href="yay.webp" target="_blank"><button type="button">Done!</button></a>
+    </div>
+    <div id="pause" class="timetablebody">
+      <h5>10.00-10.15</h5>
+    </div>
+    <div id="pause" class="timetablebody">
+      <h5>Break (outside)</h5>
+    </div>
+    <div id="pause" class="timetablebody">
+      <h5>Have fun!</h5>
+    </div>
+    <div id="ti" class="timetablebody">
+      <h5>10.15-12.00</h5>
+    </div>
+    <div id="ti" class="timetablebody">
+      <h5>Maths</h5>
+    </div>
+    <div id="ti" class="timetablebody">
+      <h5>Chapter 10: Exercise 10.2, 10.4, 10.5</h5>
+      <a href="awesome.gif" target="_blank"><button type="button">Done!</button></a>
+      <h5>Chapter 11: Exercise 11.4, 11.5, 11.13</h5>
+      <a href="bravo.gif" target="_blank"><button type="button">Done!</button></a>
+    </div>
+    <div id="lunsj" class="timetablebody">
+      <h5>12.00-12.30</h5>
+    </div>
+    <div id="lunsj" class="timetablebody">
+      <h5>Lunchbreak (inside or outside)</h5>
+    </div>
+    <div id="lunsj" class="timetablebody">
+      <h5>Play a game with someone</h5>
+      <a href="whoopie.gif" target="_blank"><button type="button">Done!</button></a>
+    </div>
+    <div id="12" class="timetablebody">
+      <h5>12.30-14.00</h5>
+    </div>
+    <div id="12" class="timetablebody">
+      <h5>English</h5>
+    </div>
+    <div id="12" class="timetablebody">
+      <h5>Language Comprehension Assignment</h5>
+      <a href="sweet.gif" target="_blank"><button type="button">Done!</button></a>
+    </div>
   </div>
 
-  <div class="mySlides fade">
-    <div class="numbertext">2 / 8</div>
-    <img src="homework1.jpg" style="width:100%">
-    <div class="text">Caption Two</div>
+  <div class="secondboxes">
+        <div id="navigationbar">
+            <a  href="./Sign in.html" onclick="alert('Good Job! Bye')"> Hi Henriette! <br> <img src="train.jpg" alt="train" width="50" height="50"><br>Sign out</a>
+            <a  href="main.html"><img id="home" src="house.png" alt="Home Page" width="50" height="50"><br>HOME</a>
+            <a  href="timetable.html"><img src="Timetable.png" alt="Week Plan" width="50" height="50"><br>WEEK PLAN</a>
+            <a  href="SafeSpace.html"><img src="safe place.png" alt="Safe Space" width="50" height="50"><br> SAFE SPACE</a>
+            <a  href="mood.html"><img src="Mood.png" alt="Mood" width="50" height="50"><br>MOOD</a>
+            <a  href="socialstory.html"><img src="SocialStory.png" alt="Mood" width="50" height="50"><br>SOCIAL STORY</a>
+        </div>
   </div>
 
-  <div class="mySlides fade">
-    <div class="numbertext">3 / 8</div>
-    <img src="homework2.jpg" style="width:100%">
-    <div class="text">Caption Three</div>
-  </div>
+  <div class="language-container">
+    <div class="header" id="header-languagecomp">
+      <h1>Language comprehension</h1><h2>Exercises <br> Week 47</h2>
+    </div>
 
-  <div class="mySlides fade">
-    <div class="numbertext">4 / 8</div>
-    <img src="homework3.jpg" style="width:100%">
-    <div class="text">Caption Four</div>
-  </div>
+      <!-- Slideshow container -->
+      <div class="slideshow-container">
 
-      <div class="mySlides fade">
-    <div class="numbertext">5 / 8</div>
-    <img src="homework4.jpg" style="width:100%">
-    <div class="text">Caption Five</div>
-  </div>
+        <!-- Full-width images with number and caption text -->
+        <div class="mySlides fade">
+          <div class="numbertext">1 / 8</div>
+          <img src="homework.jpg" style="width:100%">
+          <div class="text">Caption Text</div>
+        </div>
 
-      <div class="mySlides fade">
-    <div class="numbertext">6 / 8</div>
-    <img src="homework5.jpg" style="width:100%">
-    <div class="text">Caption Six</div>
-  </div>
+        <div class="mySlides fade">
+          <div class="numbertext">2 / 8</div>
+          <img src="homework1.jpg" style="width:100%">
+          <div class="text">Caption Two</div>
+        </div>
 
-      <div class="mySlides fade">
-    <div class="numbertext">7 / 8</div>
-    <img src="homework6.jpg" style="width:100%">
-    <div class="text">Caption Seven</div>
-  </div>
+        <div class="mySlides fade">
+          <div class="numbertext">3 / 8</div>
+          <img src="homework2.jpg" style="width:100%">
+          <div class="text">Caption Three</div>
+        </div>
 
-  <div class="mySlides fade">
-    <div class="numbertext">8 / 8</div>
-    <img src="homework7.jpg" style="width:100%">
-    <div class="text">Caption Eight</div>
-  </div>
+        <div class="mySlides fade">
+          <div class="numbertext">4 / 8</div>
+          <img src="homework3.jpg" style="width:100%">
+          <div class="text">Caption Four</div>
+        </div>
+
+        <div class="mySlides fade">
+          <div class="numbertext">5 / 8</div>
+          <img src="homework4.jpg" style="width:100%">
+          <div class="text">Caption Five</div>
+        </div>
+
+        <div class="mySlides fade">
+          <div class="numbertext">6 / 8</div>
+          <img src="homework5.jpg" style="width:100%">
+          <div class="text">Caption Six</div>
+        </div>
+
+        <div class="mySlides fade">
+          <div class="numbertext">7 / 8</div>
+          <img src="homework6.jpg" style="width:100%">
+          <div class="text">Caption Seven</div>
+        </div>
+
+        <div class="mySlides fade">
+          <div class="numbertext">8 / 8</div>
+          <img src="homework7.jpg" style="width:100%">
+          <div class="text">Caption Eight</div>
+        </div>
 
   <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1)">&#10095;</a>
-</div>
-<br>
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+  </div>
+  <br>
 
 <!-- The dots/circles -->
-<div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1)"></span>
-  <span class="dot" onclick="currentSlide(2)"></span>
-  <span class="dot" onclick="currentSlide(3)"></span>
+  <div style="text-align:center">
+    <span class="dot" onclick="currentSlide(1)"></span>
+    <span class="dot" onclick="currentSlide(2)"></span>
+    <span class="dot" onclick="currentSlide(3)"></span>
+  </div>
+</div>
+
+<div class="chat" id="chat">
+  <div class="chat-header">
+    <h3>Teacher Chat</h3>
+    <h4>Feelings</h4>
+  </div>
+  <div class="emoji">
+  <button type="button"><img class="button-image" src="happy.png" id="emoji" alt="Emoji of feeling happy"></button>
+  <button type="button"><img class="button-image" src="cool.png" id="emoji" alt="Emoji of feeling awesome"></button>
+  <button type="button"><img class="button-image" src="confused.png" id="emoji" alt="Emoji of feeling confused"></button>
+  <button type="button"><img class="button-image" src="sad.png" id="emoji" alt="Emoji of feeling sad"></button>
+  <button type="button"><img class="button-image" src="scared.png" id="emoji" alt="Emoji of feeling scared"></button>
+  <button type="button"><img class="button-image" src="meltdown.png" id="emoji" alt="Emoji of having a meltdown"></button>
+  </div>
+  <div class="container" id="light">
+    <img src="myAvatar.png" alt="Avatar teacher">
+    <p>How are your studies going?</p>
+    <span id="right" class="time">13.15</span>
+  </div>
+  <div class="container" id="dark">
+    <img src="train.jpg" id="right" alt="Avatar (of train) - child">
+    <p id="rightside-dialog">No</p>
+    <span id="left" class="time">13.16</span>
+  </div>
+  <div class="container" id="light">
+    <img src="myAvatar.png" alt="Avatar teacher">
+    <p>How are you feeling?</p>
+    <span id="right" class="time">13.18</span>
+  </div>
+  <div class="container" id="dark">
+    <img src="train.jpg" id="right" alt="Avatar (of train) - child">
+    <img src="meltdown.png" id="rightside-dialog" alt="Emoji of having a meltdown">
+    <span id="left" class="time">13.20</span>
+  </div>
+  <div class="container" id="light">
+    <img src="myAvatar.png" alt="Avatar teacher">
+    <p>I'm so sorry! You have done so well today! I think you should
+    take a break or go to your safe space.</p>
+    <span id="right" class="time">13.24</span>
+  </div>
 </div>
 
 
@@ -96,6 +220,20 @@ function showSlides() {
     dots[slideIndex-1].className += " active";
     setTimeout(showSlides, 2000); // Change image every 2 seconds
 }
+
+window.onscroll = function() {move()};
+
+var ch = document.getElementById("chat");
+var sticky = ch.offsetTop;
+
+function move() {
+  if (window.pageYOffset > sticky) {
+    ch.classList.add("sticky");
+  } else {
+    ch.classList.remove("sticky");
+  }
+}
+
 </script>
 
 
