--- a/Final Project/Final Project/socialstory.html
+++ b/Final Project/Final Project/socialstory.html
@@ -78,11 +78,11 @@
     <div class="secondboxes">
           <div id="navigationbar">
               <a  href="./Sign in.html" onclick="alert('Good Job! Bye')"> Hi Henriette! <br> <img src="train.jpg" alt="train" width="50" height="50"><br>Sign out</a>
-              <a  href="./Homework"><img src="Assignments.png" alt="Homework" width="50" height="50"><br>LANGUAGE<br></br> COMPREHENSION</a>
+              <a  href="./homework.html"><img src="Assignments.png" alt="Language Comprehension" width="50" height="50"><br>LANGUAGE<br></br> COMPREHENSION</a>
               <a  href="timetable.html"><img src="Timetable.png" alt="Week Plan" width="50" height="50"><br>WEEK PLAN</a>
               <a  href="SafeSpace.html"><img src="safe place.png" alt="Safe Space" width="50" height="50"><br> SAFE SPACE</a>
               <a  href="mood.html"><img src="Mood.png" alt="Mood" width="50" height="50"><br>MOOD</a>
-              <a  href="main.html"><img id="home" src="house.png" alt="Home" width="50" height="50"><br>HOME</a>
+              <a  href="main.html"><img id="home" src="house.png" alt="Home Page" width="50" height="50"><br>HOME</a>
           </div>
     </div>
 
