--- a/Final Project/Final Project/homework.html
+++ b/Final Project/Final Project/homework.html
@@ -88,10 +88,11 @@
   </div>
 
   <div class="language-container">
+    <!-- Spør imorgen
     <div class="header" id="header-languagecomp">
       <h1>Language comprehension</h1><h2>Exercises <br> Week 47</h2>
     </div>
-
+  -->
       <!-- Slideshow container -->
       <div class="slideshow-container">
 
