--- a/Final Project/Final Project/timetable.html
+++ b/Final Project/Final Project/timetable.html
@@ -37,12 +37,14 @@
       </div>
       <div id="To-Do" class="dag">
         <h4>Social Stories</h4>
+        <button class="button"><img src="plus.png" alt="Add event"></button>
         <p>Write three Social Stories about recess and playing games with other people</p>
         <h4>Math</h4>
         <p>Exercise 1-7 in Chapter 3</p>
       </div>
       <div id="Homework" class="dag">
         <h4>Science</h4>
+        <button class="button"><img src="plus.png" alt="Add event"></button>
         <p>Boil water and mark the time and temperature that the water turns to gas. Then freeze
         the water and note the temperature of the freezer and the time it takes for the water
         to become ice</p>
@@ -52,12 +54,14 @@
       </div>
       <div id="To-Do" class="dag">
         <h4>Science</h4>
+        <button class="button"><img src="plus.png" alt="Add event"></button>
         <p>Write a report on your homework</p>
         <h4>Norwegian Language Comprehension</h4>
         <p>Do games 1-3</p>
       </div>
       <div id="Homework" class="dag">
         <h4>Religion</h4>
+        <button class="button"><img src="plus.png" alt="Add event"></button>
         <p>Write an article about a Hindu god/godess of your choice</p>
         <h4>Music</h4>
         <p>Practice the flute</p>
@@ -67,12 +71,14 @@
       </div>
       <div id="To-Do" class="dag">
         <h4>Music</h4>
+        <button class="button"><img src="plus.png" alt="Add event"></button>
         <p>Learn to play "Morgenstemning" on your flute</p>
         <h4>Religion</h4>
         <p>Present your god/godess to your class</p>
       </div>
       <div id="Homework" class="dag">
         <h4>English</h4>
+        <button class="button"><img src="plus.png" alt="Add event"></button>
         <p>Write a Social Story about when it rains</p>
         <h4>History</h4>
         <p>Exercise 4-9 in Chapter 11</p>
@@ -82,12 +88,14 @@
       </div>
       <div id="To-Do" class="dag">
         <h4>English</h4>
+        <button class="button"><img src="plus.png" alt="Add event"></button>
         <p>Exercise 1-9 in Chapter 8</p>
         <h4>History</h4>
         <p>Exercise 10-15 in Chapter 11</p>
       </div>
       <div id="Homework" class="dag">
         <h4>Norwegian</h4>
+        <button class="button"><img src="plus.png" alt="Add event"></button>
         <p>Exercise 1-8 in Chapter 6</p>
         <h4>Science</h4>
         <p>Pick and press 5 flowers</p>
@@ -97,12 +105,14 @@
       </div>
       <div id="To-Do" class="dag">
         <h4>Science</h4>
+        <button class="button"><img src="plus.png" alt="Add event"></button>
         <p>Write about the flowers you picked in your flora</p>
         <h4>Norwegian Language Comprehension</h4>
         <p>Do exercise 1-4</p>
       </div>
       <div id="Homework" class="dag">
         <h4>Have Fun!!</h4>
+        <button class="button"><img src="plus.png" alt="Add event"></button>
       </div>
     </div>
 
