--- a/Final Project/Final Project/mood.html
+++ b/Final Project/Final Project/mood.html
@@ -94,17 +94,13 @@
       <h4>Click on one of the icons </h4>
     </div>
 
-  <!-- Angry  -->
-
     <div class="box">
-      <a target="_blank" href="img_forest.jpg"><img src="Angry train.png" alt="Avatar" id="image"></a>
+      <a target="_blank" href="img_forest.jpg"><img src="Angry train.png" alt="Angry Thomas train" id="image"></a>
       <div class="overlay">
         <div class="text">Angry</div>
       </div>
     </div>
 
-
-  <!-- Happy -->
     <div class="box">
       <a target="_blank" href="img_forest.jpg">
           <img src="Happy train.png" id="image" alt="happy Thomas train">
@@ -114,7 +110,6 @@
       </div>
     </div>
 
-  <!-- Sad  -->
     <div class="box">
       <a target="_blank" href="img_forest.jpg"> <img src="Sad train.jpg" alt="sad Thomas train" id="image" >
       </a>
@@ -123,7 +118,6 @@
       </div>
     </div>
 
-  <!-- Surprised -->
     <div class="box">
         <a target="_blank" href=""> <img src="Surprised train.jpg" alt="Suprised Thomas train" id="image" >
         </a>
