--- a/Final Project/Final Project/SafeSpace.html
+++ b/Final Project/Final Project/SafeSpace.html
@@ -14,7 +14,7 @@
             </audio>
         </div>
         <div class="train">
-            <img src="oct69.gif" >
+            <img src="./oct69.gif" >
         </div>
         <div class="feelbutton">
             <h1>Take a deep breath and let it go</h1>
