--- a/Final Project/Final Project/timetable.html
+++ b/Final Project/Final Project/timetable.html
@@ -29,7 +29,7 @@
       </div>
       <div class="calendar-header" id="homework">
         <h3>Homework</h3>
-        <img src="Assignments.png" alt="Homework of the day">
+        <img src="./Assignments.png" alt="Homework of the day">
       </div>
 
       <div id="første" class="dag">
