--- a/Final Project/Final Project/Signin.html
+++ b/Final Project/Final Project/Signin.html
@@ -8,7 +8,7 @@
   <body>
   <div class="background">
      <div class="signin-box">
-        <img src="./avatar.png" class="avatar">
+        <img src="Pictures/avatar.png" class="avatar">
         <h1>Sign In Here</h1>
         <form action="./main.html">
         <p>Username</p>
